<resources>
    <string name="app_name">ParkingSolution</string>
    <string name="title_activity_map_main">Map</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="change_profile_pic">Change Profile \n Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">FIRST NAME</string>
    <string name="family_name">FAMILY NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="currency">CURRENCY</string>
    <string name="my_wallet">MY WALLETS</string>
    <string name="balance">Balance</string>
    <string name="add_new_wallet">+ Add New Wallet</string>
</resources>
