<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".views.activity.profile.ProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F9FAFE"
            tools:context=".views.activity.profile.ProfileActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/park1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/change_pic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:padding="3dp"
                android:text="@string/change_profile_pic"
                android:textAlignment="center"
                android:textColor="@color/brownishColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

            <View
                android:id="@+id/change_profile_pic_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@+id/change_pic_text"
                app:layout_constraintEnd_toEndOf="@id/change_pic_text"
                app:layout_constraintBottom_toBottomOf="@id/change_pic_text"
                app:layout_constraintTop_toTopOf="@id/profile_pic"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/top_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_profile_pic_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">


                    <TextView
                        android:id="@+id/first_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_light"
                        android:padding="3dp"
                        android:text="@string/first_name"
                        android:textColor="@color/grayText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/first_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="3dp"
                        android:text="Alexis"
                        android:textColor="@color/brownishColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:background="@color/separator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/first_name_label" />

                    <TextView
                        android:id="@+id/family_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/montserrat_light"
                        android:padding="3dp"
                        android:text="@string/family_name"
                        android:textColor="@color/grayText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line1" />

                    <EditText
                        android:id="@+id/family_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="3dp"
                        android:text="Texas"
                        android:textColor="@color/brownishColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line1" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:background="@color/separator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/family_name_label" />

                    <TextView
                        android:id="@+id/email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/montserrat_light"
                        android:padding="3dp"
                        android:text="@string/email"
                        android:textColor="@color/grayText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line2" />

                    <EditText
                        android:id="@+id/email_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="28dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="3dp"
                        android:text="alexis.texas@x-tends.com"
                        android:textColor="@color/brownishColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line2" />

                    <View
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:background="@color/separator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_label" />

                    <TextView
                        android:id="@+id/mobile_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/montserrat_light"
                        android:padding="3dp"
                        android:text="@string/mobile"
                        android:textColor="@color/grayText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line3" />

                    <EditText
                        android:id="@+id/mobile_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="3dp"
                        android:text="+00 666666666"
                        android:textColor="@color/brownishColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line3" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>